# walrus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  imgui.ini  package-lock.json  package.json  test.bat
assets/gltf/LowPolyChar/: license.txt  scene.gltf
assets/gltf/shibahu/: scene.gltf
cmake/: bootstraps.cmake  macro.cmake  toolchain.cmake
conan/: conanfile.txt  emscripten.profile
demo/: CMakeLists.txt
demo/gltf/: CMakeLists.txt
demo/gltf/src/: main.c
demo/romantik/: CMakeLists.txt
demo/romantik/src/: camera.c  camera.h  game_logic.c  game_logic.h  game_state.c  game_state.h  hex.c  hex.h  hex_map.c  hex_map.h  main.c
demo/rotate_cube/: CMakeLists.txt
demo/rotate_cube/src/: main.c
demo/src/: main.c  main.cpp
demo/ttf/: CMakeLists.txt
demo/ttf/src/: main.c
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt  macro.h
engine/core/include/: list.h  log.h  macro.h  platform.h  queue.h
engine/core/src/: log.c  queue.c  sys.c
engine/core/test/: list_test.c
engine/engine/: CMakeLists.txt  engine.h
engine/engine/include/: app.h  engine.h  event.h  glfw_window.h  input.h  window.h
engine/engine/src/: app.c  app_impl.h  engine.c  glfw_window.c  input_device.c  wajs_window.c  window.c
engine/include/core/: list.h  log.h  macro.h  platform.h  queue.h
engine/include/engine/: app.h  engine.h  event.h  input.h  input_device.h  window.h
engine/include/rhi/: gl.h
engine/rhi/: CMakeLists.txt  gl.h  rhi.h
engine/rhi/include/: gl.h  rhi.h  rhi_context.h
engine/rhi/src/: glew.c  glew_context.c  rhi.c  rhi_gl.c  rhi_p.h
engine/src/core/: CMakeLists.txt  list.c  log.c  queue.c  sys.c
engine/src/engine/: CMakeLists.txt  app.c  app_impl.h  engine.c  event.c  glfw_window.c  input.c  input_device.c  wajs_window.c  window.c
engine/src/rhi/: CMakeLists.txt  glew.c  rhi.c  rhi_gl.c  rhi_p.h
engine/window/: CMakeLists.txt  wajs_window.h
engine/window/include/: event.h  glfw_window.h  input.h  input_device.h  window.h
engine/window/src/: event.c  glfw_window.c  input.c  input_device.c  wajs_window.c  window.c
http/: index.html  package-lock.json  script.js  wasm.js  webasm_demo.html
http/libs/: sys.js  wasm.js
libs/: CMakeLists.txt  wasm
libs/wajs/: CMakeLists.txt
libs/wajs/core/: CMakeLists.txt  list.h  macro.h  queue.h  sys.h  type.h
libs/wajs/core/src/: list.c  sys.c
libs/wajs/gl/: CMakeLists.txt  wajs_gl.h
libs/wajs/gl/src/: wajs_gl.c
libs/wajs/window/: CMakeLists.txt  event.h  input.h  window.h
libs/wajs/window/src/: event.c  input.c
libs/wajsGl/: CMakeLists.txt  wajsGl.c  wajsGl.h
server/: package-lock.json  package.json  server.js
server/src/: gl.js  sys.js  wasm.js
server/views/: webasm_demo.html
shaders/: circle_batch.shader  common.glsl  copy.shader  deferred_lighting.shader  forward_lighting.glsl  forward_lighting.shader  forward_lighting_skin.shader  fs_circle_batch.glsl  fs_copy.glsl  fs_deferred_lighting.glsl  fs_forward_lighting.glsl  fs_gbuffer.glsl  fs_hdr.glsl  fs_imgui.glsl  fs_imgui_lod.glsl  fs_mesh.glsl  fs_quad_batch.glsl  gbuffer.glsl  gbuffer.shader  gbuffer_skin.shader  hdr.shader  imgui.shader  imgui_image.shader  lighting.glsl  mesh.glsl  quad_batch.shader  skinned_mesh.glsl  srgb.glsl  tonemap.glsl  vs_circle_batch.glsl  vs_imgui.glsl  vs_mesh.glsl  vs_quad.glsl  vs_quad_batch.glsl  vs_skinned_mesh.glsl
toolchain/windows/: build.bat  configure.bat  run.bat
walrus/include/core/: array.h  assert.h  cpoly.h  handle_alloc.h  hash.h  image.h  list.h  log.h  macro.h  math.h  memory.h  mutex.h  platform.h  queue.h  ray.h  rect.h  semaphore.h  sort.h  string.h  sys.h  thread.h  transform.h
walrus/include/editor/: component_panel.h  editor.h
walrus/include/engine/: animator.h  app.h  batch_renderer.h  camera.h  component.h  control_map.h  controller.h  deferred_renderer.h  editor.h  engine.h  event.h  font.h  fps_controller.h  frame_graph.h  geometry.h  imgui.h  input.h  input_device.h  input_map.h  material.h  model.h  rdg.h  renderer.h  renderer_mesh.h  shader_library.h  system.h  thread_pool.h  window.h
walrus/include/engine/editor/: component_panel.h
walrus/include/engine/systems/: animator_system.h  camera_system.h  controller_system.h  editor_system.h  model_system.h  render_system.h  transform_system.h
walrus/include/engine/systems/pipelines/: culling_pipeline.h  deferred_pipeline.h  hdr_pipeline.h
walrus/include/rhi/: gl.h  rhi.h  rhi_defines.h  type.h  vertex_layout.h
walrus/include/rhi/webgl/KHR/: khrplatform.h
walrus/src/: CMakeLists.txt
walrus/src/core/: CMakeLists.txt  array.c  handle_alloc.c  hash.c  image.c  list.c  log.c  math.c  memory.c  mutex.c  queue.c  ray.c  semaphore.c  sort.c  string.c  sys.c  thread.c  transform.c
walrus/src/core/test/: list_test.c  queue_test.c
walrus/src/editor/: CMakeLists.txt  component_panel.c  editor.c
walrus/src/engine/: CMakeLists.txt  animator.c  app.c  app_impl.h  app_p.h  batch_renderer.c  camera.c  control_map.c  deferred_renderer.c  editor.c  engine.c  event.c  font.c  fps_controller.c  frame_graph.c  geometry.c  glfw_window.c  glfw_window.h  imgui.c  input.c  input_device.c  input_map.c  material.c  model.c  rdg.c  renderer.c  shader_library.c  thread_pool.c  wajs_window.c  window.c  window_p.h
walrus/src/engine/editor/: component_panel.c
walrus/src/engine/systems/: animator_system.c  camera_system.c  controller_system.c  editor_system.c  model_system.c  render_system.c  transform_system.c
walrus/src/engine/systems/pipelines/: culling_pipeline.c  deferred_pipeline.c  hdr_pipeline.c
walrus/src/rhi/: CMakeLists.txt  command_buffer.c  command_buffer.h  frame.c  frame.h  gl_context.c  gl_context.h  gl_framebuffer.c  gl_framebuffer.h  gl_renderer.c  gl_renderer.h  gl_shader.c  gl_shader.h  gl_texture.c  gl_texture.h  glew.c  rhi.c  rhi_gl.c  rhi_p.h  uniform_buffer.c  uniform_buffer.h  vertex_layout.c  view.h
web/: package-lock.json  package.json  server.js
web/electron/: main.js
web/res/: index.html
web/src/: gl.js  sys.js  wasm.js
